[package]
name = "todos"
version = "0.1.0"
authors = ["Dima Shur <dimashur@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.1"
postgres = { version = "0.15", features = ["with-chrono"] }
r2d2 = "0.8.4"
r2d2_postgres = "0.14.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = {version = "0.4.6", features = ["serde"]}

[dependencies.rocket_contrib]
version = "0.4.1"
default-features = false
features = ["postgres_pool", "json"]
